Fix stuff by using appends
Much easier than providing a diff!

Signed-off-by: Itxaka <itxaka@kairos.io>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,5 +1,10 @@
 BBFILES += "${LAYERDIR}/recipes/*/*.bb ${LAYERDIR}/recipes/*/*.bbappend ${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
 BBPATH .= ":${LAYERDIR}"
 BBFILE_COLLECTIONS += "kairos"
-BBFILE_PRIORITY_kairos = "20"
+BBFILE_PRIORITY_kairos = "60"
 BBFILE_PATTERN_kairos := "^${LAYERDIR}/"
+
+PNBLACKLIST[parted] = ""
+PNBLACKLIST[sudo] = ""
+PNBLACKLIST[rsync] = ""
+PNBLACKLIST[gptfdisk] = ""
