--- a/recipes-packages/agent/files/cos-setup-fs.service
+++ b/recipes-packages/agent/files/cos-setup-fs.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=cOS system after FS setup
 DefaultDependencies=no
-After=local-fs.target
+After=local-fs.target cos-setup-rootfs.service
 Wants=local-fs.target
 Before=sysinit.target
 
