Some more fixes
Signed-off-by: Itxaka <itxaka@kairos.io>

--- a/recipes-packages/agent/files/cos-setup-network.service
+++ b/recipes-packages/agent/files/cos-setup-network.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/kairos-agent run-stage network
+ExecStart=kairos-agent run-stage network
 
 [Install]
 WantedBy=multi-user.target
