--- a/recipes-packages/agent/files/kairos-agent.service
+++ b/recipes-packages/agent/files/kairos-agent.service
@@ -5,6 +5,6 @@ Wants=network.target
 [Service]
 Restart=on-failure
 RestartSec=5s
-ExecStart=/usr/bin/kairos-agent start
+ExecStart=kairos-agent start
 [Install]
 WantedBy=multi-user.target
