--- a/recipes-packages/agent/files/cos-setup-boot.service
+++ b/recipes-packages/agent/files/cos-setup-boot.service
@@ -5,7 +5,7 @@ Before=getty.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/kairos-agent run-stage boot
+ExecStart=kairos-agent run-stage boot
 
 [Install]
 WantedBy=multi-user.target
