--- a/recipes-packages/agent/files/cos-setup-fs.service
+++ b/recipes-packages/agent/files/cos-setup-fs.service
@@ -8,7 +8,7 @@ Before=sysinit.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/kairos-agent run-stage fs
+ExecStart=kairos-agent run-stage fs
 
 [Install]
 WantedBy=sysinit.target
