--- a/recipes-packages/agent/files/cos-setup-initramfs.service
+++ b/recipes-packages/agent/files/cos-setup-initramfs.service
@@ -6,7 +6,7 @@ Before=sysinit.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/kairos-agent run-stage initramfs
+ExecStart=kairos-agent run-stage initramfs
 
 [Install]
 WantedBy=sysinit.target
