--- a/recipes-packages/agent/files/cos-setup-rootfs.service
+++ b/recipes-packages/agent/files/cos-setup-rootfs.service
@@ -7,7 +7,7 @@ Before=sysinit.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/kairos-agent run-stage rootfs
+ExecStart=kairos-agent run-stage rootfs
 
 [Install]
 WantedBy=sysinit.target
